added cloud changes

--- a/Config/config.properties
+++ b/Config/config.properties
@@ -20,9 +20,9 @@ githuaction=false
 
 retry=0
 
-cloud=false
+cloud=true
 
-huburl=http://98.80.8.144
+huburl=http://13.222.167.213
 
 hubport=4444
 
