--- a/Config/config.properties
+++ b/Config/config.properties
@@ -4,7 +4,7 @@ qaURL=https://freelance-learn-automation.vercel.app/login
 
 stagingURL=https://staging.freelance-learn-automation.vercel.app/login
 
-prodURL=https://learn-automation.com/login
+prodURL=https://learn-automation.com
 
 Highlight=true
 
